<resources>
    <string name="app_name">SCB Billing and Collection</string>
    <string name="water_bill">
        Secunderabad Containment\n
        Water Bill\n
        \n
        Bill Date: [Bill]\n
        Due Date: [Due]\n
        Receipt Number: [Receipt]\n
        USN Number: [USN]\n
        Name: [Name]\n
        Address: [Address]\n
        \n
        Bill Details:\n
        ---------------------\n
        Previous Reading: [Previous]\n
        Present Reading: [Present]\n
        Usage Units: [Units]\n
        \n
        Demand Amount: [Demand]\n
        Arrears Amount: [Arrears]\n
        Service Charge: [Service]\n
        Total Amount: [Total]\n
        \n
        HelpLine Number\n 180001290345\n\n
        ---------------------\n
    </string>

    <string name="collect_bill">
        SecunderabadContainmentBoardjwksklks \n
        Collect Bill\n
        \n
        Bill Date: [Bill]\n
        Due Date: [Due]\n
        Receipt Number: [Receipt]\n
        USN Number: [USN]\n
        Name: [Name]\n
        Address: [Address]\n
        \n
        Bill Details:\n
        ---------------------\n
        Previous Reading: [Previous]\n
        Present Reading: [Present]\n
        Usage Units: [Units]\n
        \n
        Demand Amount: [Demand]\n
        Arrears Amount: [Arrears]\n
        Service Charge: [Service]\n
        Total Amount: [Total]\n
        \n
        HelpLine Number\n 180001290345\n\n
        ---------------------\n
    </string>
    <string name="login">Login</string>
    <string name="enter_pin_text">Enter Password</string>
    <string name="enter_mobile_number_text">Enter Username</string>
    <string name="sign_in_to_continue_text">Sign in to Continue</string>
    <string name="welcome_text">Welcome,</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_message">There\'s a problem with your internet connection. Please check and retry.</string>
    <string name="close">Close</string>

    <string-array name="collect_types">
        <item>Cash</item>
        <item>Cheque</item>
        <item>DD</item>
        <!--        <item>Card</item>-->
        <!--        <item>QR</item>-->
    </string-array>

    <string-array name="meter_status">
        <item>Metered</item>
        <item>Locked</item>
        <item>Repair</item>
        <item>Un Metered</item>
    </string-array>

</resources>